# lumin

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Kconfig  Makefile  build.sh  copy_res.cmake  iso.sh  kernel.map  linker.ld
arch/x86_64/: bootloader.asm  smp_trampoline.asm  stage2.asm
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
glad/: CMakeLists.txt
glad/include/glad/: gl.h
include/: lumin.h  renderer.h  vectors.h  window.h
include/Color/: Color.h
include/Renderer/: Renderer.h
include/Shaders/: Shaders.h
include/Vectors/: Vectors.h
include/Window/: Window.h
kernel/: Kconfig  acpi.c  acpi.h  acpi_common.h  gdt.c  gdt.h  idt.c  idt.h  interrupts.asm  kernel.c  kernel.ld  kernel_entry.asm  keyboard.c  kprintf.c  kprintf.h  panic.c  panic.h  ports.h
kernel/block/: Kconfig  block.c  block.h
kernel/drivers/: Kconfig  device.c  mmio.h
kernel/drivers/acpi/: acpi.c  acpi.h  acpi_common.h
kernel/drivers/ata/: ahci.c  ahci.h  ata.c  ata.h
kernel/drivers/fb/: fb.c  fb.h  fb_font.h
kernel/drivers/pci/: pci.c  pci.h
kernel/drivers/rtc/: rtc.c  rtc.h
kernel/drivers/serial/: serial.c  serial.h
kernel/drivers/timer/: hpet.c  hpet.h  lapic.c  lapic.h  pit.c  pit.h  timer.c  timer.h
kernel/drivers/vga/: vga.c  vga.h
kernel/fs/: Kconfig  fat32.c  fat32.h  pipefs.c  pipefs.h  procfs.c  procfs.h  stat.h  tmpfs.c  tmpfs.h  vfs.c  vfs.h
kernel/include/: atomic.h  device.h  initcall.c  initcall.h  percpu.h  signal.h  spinlock.h
kernel/mm/: Kconfig  e820.h  kmalloc.c  kmalloc.h  pmm.c  pmm.h  vmm.c  vmm.h
kernel/proc/: Kconfig  elf.c  elf.h  syscall.c  syscall.h  task.c  task.h
kernel/smp/: smp.c  smp.h
libc/: Makefile
libc/crt/: crt0.asm
libc/include/: assert.h  ctype.h  dirent.h  errno.h  fcntl.h  limits.h  signal.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
libc/include/sys/: stat.h  syscall.h  types.h  wait.h
libc/src/: stat.c  syscall.c  time.c  wait.c
libc/src/dirent/: dirent.c
libc/src/signal/: signal.c
libc/src/stdio/: fget.c  file.c  fput.c  printf.c  scanf.c
libc/src/stdlib/: abs.c  exit.c  malloc.c  qsort.c  rand.c  strtol.c
libc/src/string/: mem.c  str.c
libc/src/unistd/: unistd.c
os/: keyboard.c  keyboard.h  shell.c
resources/shaders/: vertex_shader.glsl
shaders/: default.frag  default.vert
src/: allocator.rs  bootloader.asm  colors.h  gdt.rs  interrupts.rs  lib.rs  lumin.h  main.cpp  mesh.h  multiboot.rs  paging.rs  renderer.cpp  renderer.h  shaders.cpp  shaders.h  vectors.h  vga.rs  window.cpp  window.h  window_manager.cpp  window_manager.h
src/Renderer/: Renderer.cpp
src/Shaders/: Shaders.cpp
src/Window/: Window.cpp
src/boot/: boot.asm  linker.ld
tools/: psf2c.py
tools/kconfig/: genconfig.py
user/: Kconfig  as.c  ecc.c  hello.c  hello.elf  init.c  init.elf  shell.c
user/coreutils/: cat.c  clear.c  cp.c  echo.c  ed.c  help.c  ls.c  mv.c  rm.c
user/sbin/: init.c
